src/dialog/snapshots/tvision__dialog__filedlg__tests__snapshot_chdir_dialog.snap
---
source: src/dialog/filedlg.rs
expression: screen.snapshot()
---
size: 64x20
cursor: hidden
text:
|                                                                |
|                                                                |
|                ┌────────────── Change Directory ──────────────┐|
|                │                                              │|
|                │  Directory name                              │|
|                │   /home/user                            ▐↓▌  │|
|                │                                              │|
|                │  Directory tree                              │|
|                │   └─┬/                        ▲      OK   ▄  │|
|                │     └─┬home                   ▓    ▀▀▀▀▀▀▀▀  │|
|                │       └─┬user                 ▓              │|
|                │         └┬─projects           ▓    Chdir  ▄  │|
|                │          └─src                ▓    ▀▀▀▀▀▀▀▀  │|
|                │                               ▓              │|
|                │                               ▓    Revert ▄  │|
|                │                               ▓    ▀▀▀▀▀▀▀▀  │|
|                │                               ▓              │|
|                │                               ▼     Help  ▄  │|
|                │                                    ▀▀▀▀▀▀▀▀  │|
|                └──────────────────────────────────────────────┘|
attr:
|................................................................|
|................................................................|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|................aaaaaaaaaaaaabaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|................aaacccccccccccccccccccccccccccccccccccccccdedaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|................aaaaaaaaaaaaabaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|................aaafffffffffffffffffffffffffffffgaaaeeeeheeeaaaa|
|................aaafffffffffffffffffffffffffffffgaaaaaaaaaaaaaaa|
|................aaaiiiiiiiiiiiiiiiiiiiiiiiiiiiiigaaaaaaaaaaaaaaa|
|................aaafffffffffffffffffffffffffffffgaaaeheeeeeeaaaa|
|................aaafffffffffffffffffffffffffffffgaaaaaaaaaaaaaaa|
|................aaafffffffffffffffffffffffffffffgaaaaaaaaaaaaaaa|
|................aaafffffffffffffffffffffffffffffgaaaeheeeeeeaaaa|
|................aaafffffffffffffffffffffffffffffgaaaaaaaaaaaaaaa|
|................aaafffffffffffffffffffffffffffffgaaaaaaaaaaaaaaa|
|................aaafffffffffffffffffffffffffffffgaaaeeheeeeeaaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(0) bg=BIOS(7)
  b fg=BIOS(14) bg=BIOS(7)
  c fg=BIOS(15) bg=BIOS(1)
  d fg=BIOS(2) bg=BIOS(7)
  e fg=BIOS(0) bg=BIOS(2)
  f fg=BIOS(0) bg=BIOS(3)
  g fg=BIOS(1) bg=BIOS(3)
  h fg=BIOS(14) bg=BIOS(2)
  i fg=BIOS(15) bg=BIOS(2)
