src/dialog/snapshots/tvision__dialog__filedlg__tests__snapshot_dir_list_box_tree.snap
---
source: src/dialog/filedlg.rs
expression: "render_dlb(&mut dlb, 30, 8)"
---
size: 30x8
cursor: hidden
text:
| └─┬/                         |
|   └─┬home                    |
|     └─┬oetiker               |
|       └┬─projects            |
|        ├─scratch             |
|        └─tmp                 |
|                              |
|                              |
attr:
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|bbbbbbbbbbbbbbbbbbbbbbbbbbbbbb|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(0) bg=BIOS(3)
  b fg=BIOS(15) bg=BIOS(2)
