src/dialog/snapshots/tvision__dialog__filedlg__tests__snapshot_dir_list_box_tree_cursor_off_cur.snap
---
source: src/dialog/filedlg.rs
expression: "render_dlb(&mut dlb, 30, 8)"
---
size: 30x8
cursor: hidden
text:
| └─┬/                         |
|   └─┬home                    |
|     └─┬oetiker               |
|       └┬─projects            |
|        ├─scratch             |
|        └─tmp                 |
|                              |
|                              |
attr:
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|bbbbbbbbbbbbbbbbbbbbbbbbbbbbbb|
|cccccccccccccccccccccccccccccc|
|bbbbbbbbbbbbbbbbbbbbbbbbbbbbbb|
|bbbbbbbbbbbbbbbbbbbbbbbbbbbbbb|
|bbbbbbbbbbbbbbbbbbbbbbbbbbbbbb|
|bbbbbbbbbbbbbbbbbbbbbbbbbbbbbb|
|bbbbbbbbbbbbbbbbbbbbbbbbbbbbbb|
legend:
  . default
  a fg=BIOS(15) bg=BIOS(2)
  b fg=BIOS(0) bg=BIOS(3)
  c fg=BIOS(14) bg=BIOS(3)
