src/dialog/snapshots/tvision__dialog__filedlg__tests__snapshot_file_dialog.snap
---
source: src/dialog/filedlg.rs
expression: screen.snapshot()
---
size: 64x20
cursor: hidden
text:
|                                                                |
|               ┌───────────────── Open a File ─────────────────┐|
|               │                                               │|
|               │  Name                                         │|
|               │   *.rs                       ▐↓▌    Open   ▄  │|
|               │                                    ▀▀▀▀▀▀▀▀▀  │|
|               │  Files                                        │|
|               │   lib.rs        │                  Cancel  ▄  │|
|               │   main.rs       │                  ▀▀▀▀▀▀▀▀▀  │|
|               │   src/          │                             │|
|               │   ../           │                             │|
|               │                 │                             │|
|               │                 │                             │|
|               │                 │                             │|
|               │                 │                             │|
|               │  ◄▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓►              │|
|               │                                               │|
|               │ /fixture/*.rs                                 │|
|               │                                               │|
|               └───────────────────────────────────────────────┘|
attr:
|................................................................|
|...............aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|...............aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|...............aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|...............aaabbbbbbbbbbbbbbbbbbbbbbbbbbbbcdcaaddeddddddaaaa|
|...............aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|...............aaafaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|...............aaaggggggggggggggghiiiiiiiiiiiiiiiaadddddddddaaaa|
|...............aaaiiiiiiiiiiiiiiihiiiiiiiiiiiiiiiaaaaaaaaaaaaaaa|
|...............aaaiiiiiiiiiiiiiiihiiiiiiiiiiiiiiiaaaaaaaaaaaaaaa|
|...............aaaiiiiiiiiiiiiiiihiiiiiiiiiiiiiiiaaaaaaaaaaaaaaa|
|...............aaaiiiiiiiiiiiiiiihiiiiiiiiiiiiiiiaaaaaaaaaaaaaaa|
|...............aaaiiiiiiiiiiiiiiihiiiiiiiiiiiiiiiaaaaaaaaaaaaaaa|
|...............aaaiiiiiiiiiiiiiiihiiiiiiiiiiiiiiiaaaaaaaaaaaaaaa|
|...............aaaiiiiiiiiiiiiiiihiiiiiiiiiiiiiiiaaaaaaaaaaaaaaa|
|...............aaahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhaaaaaaaaaaaaaaa|
|...............aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|...............ajjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjja|
|...............ajjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjja|
|...............aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(170,170,170)
  b fg=RGB(255,255,255) bg=RGB(0,0,170)
  c fg=RGB(0,170,0) bg=RGB(170,170,170)
  d fg=RGB(0,0,0) bg=RGB(0,170,0)
  e fg=RGB(255,255,85) bg=RGB(0,170,0)
  f fg=RGB(255,255,85) bg=RGB(170,170,170)
  g fg=RGB(255,255,255) bg=RGB(0,170,0)
  h fg=RGB(0,0,170) bg=RGB(0,170,170)
  i fg=RGB(0,0,0) bg=RGB(0,170,170)
  j fg=RGB(0,170,170) bg=RGB(0,0,170)
