src/dialog/snapshots/tvision__dialog__filedlg__tests__snapshot_file_input_line.snap
---
source: src/dialog/filedlg.rs
expression: "render_fil(&mut fil, 20, 1)"
---
size: 20x1
cursor: hidden
text:
| src/*.rs           |
attr:
|aaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(15) bg=BIOS(1)
