src/dialog/snapshots/tvision__dialog__filedlg__tests__snapshot_file_list.snap
---
source: src/dialog/filedlg.rs
expression: "render_fl(&mut fl, 30, 6)"
---
size: 30x6
cursor: hidden
text:
| lib.rs        │              |
| main.rs       │              |
| readme.txt    │              |
| src/          │              |
| tests/        │              |
| ../           │              |
attr:
|aaaaaaaaaaaaaaabbbbbbbbbbbbbbb|
|bbbbbbbbbbbbbbbbbbbbbbbbbbbbbb|
|bbbbbbbbbbbbbbbbbbbbbbbbbbbbbb|
|bbbbbbbbbbbbbbbbbbbbbbbbbbbbbb|
|bbbbbbbbbbbbbbbbbbbbbbbbbbbbbb|
|bbbbbbbbbbbbbbbbbbbbbbbbbbbbbb|
legend:
  . default
  a fg=BIOS(15) bg=BIOS(1)
  b fg=BIOS(7) bg=BIOS(1)
